--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,9 +1,8 @@
 <%= form_tag students_path, method: :get do %>
 
   <label>Name Search:</label>
-  <%= text_field_tag :name %> 
-
-  <%= submit_tag "Search" %>
+  <%= text_field_tag :name, params[:name] %>
+  <%= submit_tag "Search", name: nil %>
 
 <% end %>
 
