--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,13 +1,12 @@
 <%= form_tag students_path, method: :get do %>
 
   <label>Name Search:</label>
-  <%= text_field_tag :name %> 
-
-  <%= submit_tag "Search" %>
+  <%= text_field_tag :name, params[:name] %>
+  <%= submit_tag "Search", name: nil %>
 
 <% end %>
 
 
-<%= @students.each do |std| %>
-  <%= render partial: 'student', locals: {student: std} %>
+<%= @students.each do |student| %>
+  <%= render partial: 'student', locals: {student: student} %>
 <% end %>
